<resources>
    <string name="app_name">Tìm gia sư</string>
    <string name="save_profile">Lưu hồ sơ</string>
    <string name="sign_up">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="email_address_login">Email</string>
    <string name="save">Lưu</string>
    <string name="fullname">Họ tên</string>
    <string name="email">Email</string>
    <string name="mobile">SĐT</string>
    <string name="gender">Giới tính</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="city">Thành phố</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="edit_profile">Sửa thông tin</string>
    <string name="fill_fullname">Nhập họ tên</string>
    <string name="fill_email">Nhập email</string>
    <string name="fill_mobile">Nhập SĐT</string>
    <string name="fill_dob">Nhập ngày sinh</string>
    <string name="fill_password">Nhập mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="fill_comfirm_psw">Nhập mật khẩu</string>
    <string name="term_and_condition">Điều khoản</string>
    <string name="forgot_password_title">Quên mật khẩu</string>
    <string name="forgot_password_des">Nhập địa chỉ email và chúng tỗi sẽ gửi mật khẩu mới</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="submit">Gửi</string>
    <string name="quote">\"If you\'\re good at something, never do it for free.\"\n-Joker-\t\t</string>
    <string name="remove">xóa</string>
    <string name="submitted_offer">Thỏa thuận</string>
    <string name="verify_mobile_number">Xác nhận SĐT</string>
    <string name="verify_mobile_des">Nhập mã OTP có 6 số được gửi tới SĐT của bạn</string>
    <string name="resend_one_time_pin">Gửi lại OTP</string>
    <string name="address">Địa chỉ</string>
    <string name="current_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu</string>
    <string name="will_be_tutor">Đăng kí thông tin gia sư</string>
    <string name="class_tc">Lớp dạy</string>
    <string name="subject">Môn</string>
    <string name="time_tc">Thời gian giảng dạy</string>
    <string name="service_fee">Mức lương mong muốn (VND / h)</string>
    <string name="save_info_tutor">Lưu thông tin gia sư</string>
    <string name="tutor_des">Vui lòng đăng tải CMND, bằng tốt nghiệp, các bằng cấp khác để xác minh tài khoản</string>
    <string name="profile">Hồ sơ</string>
    <string name="tutor_profile_des">Ảnh chứng thực</string>
    <string name="contact">Liên hệ</string>
    <string name="rating">Đánh giá</string>
    <string name="salary">Mức lương (VND/h)</string>
    <string name="post">Đăng tuyển</string>
    <string name="post_des">Vui lòng chụp ảnh cmt/shk để xác thực thông tin</string>
    <string name="edit">Sửa</string>
    <string name="chat">Chat</string>
    <string name="mark_as_sold">Nhận</string>
    <string name="history">Lịch sử</string>
    <string name="accept">Chấp nhận</string>
    <string name="filter">Lọc</string>
    <string name="filter_by_gender">Lọc theo giới tính</string>
    <string name="filter_by_class">Lọc theo lớp</string>
    <string name="filter_by_subject">Lọc theo môn</string>
    <string name="apply">Áp dụng</string>
</resources>
