<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/green">

        <ImageView
            android:id="@+id/back_iv"
            style="@style/ImageViewBase.ToolBar"
            android:padding="@dimen/padding_20dp"
            app:srcCompat="@drawable/ic_white_back" />

        <TextView
            style="@style/TextViewBase.ToolbarTitle"
            android:layout_centerInParent="true"
            android:text="@string/filter"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/apply_bt"
            style="@style/TextViewBase.Label"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:padding="@dimen/padding_8dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/padding_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewBase.Label"
                android:text="@string/filter_by_gender" />

            <Spinner
                android:id="@+id/gender_sp"
                style="@style/SpinnerBase"
                android:layout_marginTop="@dimen/padding_10dp"
                android:text="@string/city" />

            <View style="@style/GrayDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewBase.Label"
                android:text="@string/filter_by_class" />

            <TextView
                android:id="@+id/class_tv"
                style="@style/EdittextBase.Signup"
                android:layout_width="match_parent" />

            <View style="@style/GrayDivider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewBase.Label"
                android:text="@string/filter_by_subject" />

            <TextView
                android:id="@+id/subject_tv"
                style="@style/EdittextBase.Signup"
                android:layout_width="match_parent" />

            <View style="@style/GrayDivider" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>