<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/green">

        <ImageView
            android:id="@+id/backIv"
            style="@style/ImageViewBase.ToolBar"
            android:paddingLeft="@dimen/padding_sub_10dp"
            android:src="@drawable/ic_white_back" />

        <TextView
            style="@style/TextViewBase.ToolbarTitle"
            android:layout_centerInParent="true"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fullname_tv"
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/fullname" />

                <EditText
                    android:id="@+id/fullNameEt"
                    style="@style/EdittextBase.Signup"
                    android:hint="@string/fill_fullname"
                    android:textColorHint="@color/text_gray"
                    android:textSize="@dimen/ts_12sp" />
            </LinearLayout>

            <View
                android:id="@+id/fullname_line"
                style="@style/GrayDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_tv"
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/emailEt"
                    style="@style/EdittextBase.Signup"
                    android:hint="@string/fill_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/text_gray"
                    android:textSize="@dimen/ts_12sp" />
            </LinearLayout>

            <View
                android:id="@+id/email_line"
                style="@style/GrayDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/moblie_tv"
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/mobile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/countryCodeSpn"
                        style="@style/SpinnerBase"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:id="@+id/phoneEt"
                        style="@style/EdittextBase.Signup"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:hint="@string/fill_mobile"
                        android:inputType="phone"
                        android:textColorHint="@color/text_gray"
                        android:textSize="@dimen/ts_12sp"
                        tools:ignore="RtlCompat" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/mobile_line"
                style="@style/GrayDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/gender" />

                <Spinner
                    android:id="@+id/genderSpn"
                    style="@style/SpinnerBase"
                    android:layout_marginTop="@dimen/padding_10dp" />
            </LinearLayout>

            <View
                android:id="@+id/genreLine"
                style="@style/GrayDivider"
                android:layout_marginTop="@dimen/margin_10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/date_of_birth" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/dateOfBirthLl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="@dimen/padding_5dp"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/padding_5dp"
                    tools:ignore="RtlCompat">

                    <TextView
                        android:id="@+id/dateOfBirthTv"
                        style="@style/TextViewBase.Content"
                        android:layout_weight="1"
                        android:text="@string/fill_dob"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/ts_12sp" />

                    <ImageView
                        style="@style/ImageViewBase"
                        android:layout_width="@dimen/size_20dp"
                        android:layout_height="@dimen/size_20dp"
                        android:layout_gravity="center"
                        android:padding="@dimen/padding_5dp"
                        android:src="@drawable/ic_drop_arrow" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/dateOfBirthSpn"
                    style="@style/SpinnerBase"
                    android:text="@string/date_of_birth"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:id="@+id/dobLine"
                style="@style/GrayDivider"
                android:layout_marginTop="@dimen/margin_10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/city" />

                <Spinner
                    android:id="@+id/citySpn"
                    style="@style/SpinnerBase"
                    android:layout_marginTop="@dimen/padding_10dp"
                    android:text="@string/city" />
            </LinearLayout>

            <View
                android:id="@+id/cityLine"
                style="@style/GrayDivider"
                android:layout_marginTop="@dimen/margin_10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/creat_pass_tv"
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passwordEt"
                    style="@style/EdittextBase.Signup"
                    android:hint="@string/fill_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_gray"
                    android:textSize="@dimen/ts_12sp" />
            </LinearLayout>

            <View
                android:id="@+id/create_pass_line"
                style="@style/GrayDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/confirm_pass_tv"
                    style="@style/TextViewBase.Label.SignUp"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/confirmPasswordEt"
                    style="@style/EdittextBase.Signup"
                    android:hint="@string/fill_comfirm_psw"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_gray"
                    android:textSize="@dimen/ts_12sp" />
            </LinearLayout>

            <View
                android:id="@+id/confirm_pass_line"
                style="@style/GrayDivider" />

            <TextView
                android:id="@+id/about_us_bt"
                style="@style/TextViewBase"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_30dp"
                android:text="@string/term_and_condition"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/ts_12sp" />

            <TextView
                android:id="@+id/signUpTv"
                style="@style/TextViewBase.Button.Green"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/sign_up" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>