<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/green">

        <ImageView
            android:id="@+id/backIv"
            style="@style/ImageViewBase.ToolBar"
            android:paddingLeft="@dimen/padding_sub_10dp"
            android:src="@drawable/ic_white_back" />

        <TextView
            style="@style/TextViewBase.ToolbarTitle"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password_title"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingEnd="@dimen/padding_20dp"
        android:paddingStart="@dimen/padding_20dp">

        <TextView
            style="@style/TextViewBase.Content"
            android:layout_width="@dimen/size_240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_25dp"
            android:padding="@dimen/padding_7dp"
            android:text="@string/forgot_password_des"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewBase.Label"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/emailAddressEt"
                style="@style/EdittextBase.Signup"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View style="@style/GrayDivider" />
    </LinearLayout>

    <TextView
        android:id="@+id/submitResetPassword"
        style="@style/TextViewBase.Button.Green"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_20dp"
        android:text="@string/submit" />
</RelativeLayout>