<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/green">

        <ImageView
            android:id="@+id/backIv"
            style="@style/ImageViewBase.ToolBar"
            android:padding="@dimen/padding_20dp"
            app:srcCompat="@drawable/ic_white_back" />

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextViewBase.ToolbarTitle"
            android:layout_centerInParent="true"
            android:text="@string/verify_mobile_number"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        style="@style/TextViewBase"
        android:layout_marginEnd="@dimen/padding_50dp"
        android:layout_marginStart="@dimen/padding_50dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/verify_mobile_des"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/ts_14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60dp"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mUserNumber1Et"
            style="@style/EditText.MobileNumber" />

        <EditText
            android:id="@+id/mUserNumber2Et"
            style="@style/EditText.MobileNumber" />

        <EditText
            android:id="@+id/mUserNumber3Et"
            style="@style/EditText.MobileNumber" />

        <EditText
            android:id="@+id/mUserNumber4Et"
            style="@style/EditText.MobileNumber" />

        <EditText
            android:id="@+id/mUserNumber5Et"
            style="@style/EditText.MobileNumber" />

        <EditText
            android:id="@+id/mUserNumber6Et"
            style="@style/EditText.MobileNumber"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <TextView
        android:id="@+id/okBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/padding_5dp"
        android:paddingLeft="@dimen/padding_15dp"
        android:paddingRight="@dimen/padding_15dp"
        android:paddingTop="@dimen/padding_5dp"
        android:text="@string/ok"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/resendPinTv"
        style="@style/TextViewBase"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/resend_one_time_pin"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/ts_16sp"
        android:textStyle="bold" />
</LinearLayout>
